@@ -19,7 +19,7 @@ package org.operaton.bpm.engine.test.api.multitenancy.tenantcheck;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.operaton.bpm.engine.IdentityService;
 import org.operaton.bpm.engine.ProcessEngineException;
@@ -56,6 +56,7 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   protected IdentityService identityService;
 
   protected Task task;
+  String taskId;
 
   @Rule
   public RuleChain ruleChain = RuleChain.outerRule(engineRule).around(testRule);
@@ -68,6 +69,7 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
     engineRule.getRuntimeService().startProcessInstanceByKey(PROCESS_DEFINITION_KEY).getId();
 
     task = engineRule.getTaskService().createTaskQuery().singleResult();
+    taskId = task.getId();
 
     taskService = engineRule.getTaskService();
     identityService = engineRule.getIdentityService();
@@ -77,9 +79,9 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void setAssigneeForTaskWithAuthenticatedTenant() {
 
-    identityService.setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
-    taskService.setAssignee(task.getId(), "demo");
+    taskService.setAssignee(taskId, "demo");
 
     // then
     assertThat(taskService.createTaskQuery().taskAssignee("demo").count()).isEqualTo(1L);
@@ -91,10 +93,10 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> taskService.setAssignee(task.getId(), "demo"))
+    assertThatThrownBy(() -> taskService.setAssignee(taskId, "demo"))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot assign the task '"
-          + task.getId() +"' because it belongs to no authenticated tenant.");
+          + taskId +"' because it belongs to no authenticated tenant.");
 
   }
 
@@ -104,7 +106,7 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
     identityService.setAuthentication("aUserId", null);
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
-    taskService.setAssignee(task.getId(), "demo");
+    taskService.setAssignee(taskId, "demo");
     // then
     assertThat(taskService.createTaskQuery().taskAssignee("demo").count()).isEqualTo(1L);
   }
@@ -113,9 +115,9 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void setOwnerForTaskWithAuthenticatedTenant() {
 
-    identityService.setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
-    taskService.setOwner(task.getId(), "demo");
+    taskService.setOwner(taskId, "demo");
 
     // then
     assertThat(taskService.createTaskQuery().taskOwner("demo").count()).isEqualTo(1L);
@@ -127,10 +129,10 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> taskService.setOwner(task.getId(), "demo"))
+    assertThatThrownBy(() -> taskService.setOwner(taskId, "demo"))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot assign the task '"
-          + task.getId() + "' because it belongs to no authenticated tenant.");
+          + taskId + "' because it belongs to no authenticated tenant.");
 
   }
 
@@ -140,7 +142,7 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
     identityService.setAuthentication("aUserId", null);
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
-    taskService.setOwner(task.getId(), "demo");
+    taskService.setOwner(taskId, "demo");
     // then
     assertThat(taskService.createTaskQuery().taskOwner("demo").count()).isEqualTo(1L);
   }
@@ -149,35 +151,35 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void getIdentityLinkWithAuthenticatedTenant() {
 
-    identityService.setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
-    taskService.setOwner(task.getId(), "demo");
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
+    taskService.setOwner(taskId, "demo");
 
-    assertThat(taskService.getIdentityLinksForTask(task.getId()).get(0).getType()).isEqualTo("owner");
+    assertThat(taskService.getIdentityLinksForTask(taskId).get(0).getType()).isEqualTo("owner");
   }
 
   @Test
   public void getIdentityLinkWitNoAuthenticatedTenant() {
 
-    taskService.setOwner(task.getId(), "demo");
+    taskService.setOwner(taskId, "demo");
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> taskService.getIdentityLinksForTask(task.getId()))
+    assertThatThrownBy(() -> taskService.getIdentityLinksForTask(taskId))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot read the task '"
-          + task.getId() +"' because it belongs to no authenticated tenant.");
+          + taskId +"' because it belongs to no authenticated tenant.");
 
   }
 
   @Test
   public void getIdentityLinkWithDisabledTenantCheck() {
 
-    taskService.setOwner(task.getId(), "demo");
+    taskService.setOwner(taskId, "demo");
     identityService.setAuthentication("aUserId", null);
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
     // then
-    assertThat(taskService.getIdentityLinksForTask(task.getId()).get(0).getType()).isEqualTo("owner");
+    assertThat(taskService.getIdentityLinksForTask(taskId).get(0).getType()).isEqualTo("owner");
 
   }
 
@@ -185,8 +187,8 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void addCandidateUserWithAuthenticatedTenant() {
 
-    identityService.setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
-    taskService.addCandidateUser(task.getId(), "demo");
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
+    taskService.addCandidateUser(taskId, "demo");
 
     // then
     assertThat(taskService.createTaskQuery().taskCandidateUser("demo").count()).isEqualTo(1L);
@@ -198,10 +200,10 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> taskService.addCandidateUser(task.getId(), "demo"))
+    assertThatThrownBy(() -> taskService.addCandidateUser(taskId, "demo"))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot assign the task '"
-          + task.getId() +"' because it belongs to no authenticated tenant.");
+          + taskId +"' because it belongs to no authenticated tenant.");
 
   }
 
@@ -212,7 +214,7 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
     // when
-    taskService.addCandidateUser(task.getId(), "demo");
+    taskService.addCandidateUser(taskId, "demo");
 
     // then
     assertThat(taskService.createTaskQuery().taskCandidateUser("demo").count()).isEqualTo(1L);
@@ -222,8 +224,8 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void addCandidateGroupWithAuthenticatedTenant() {
 
-    identityService.setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
-    taskService.addCandidateGroup(task.getId(), "demo");
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
+    taskService.addCandidateGroup(taskId, "demo");
 
     // then
     assertThat(taskService.createTaskQuery().taskCandidateGroup("demo").count()).isEqualTo(1L);
@@ -235,10 +237,10 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> taskService.addCandidateGroup(task.getId(), "demo"))
+    assertThatThrownBy(() -> taskService.addCandidateGroup(taskId, "demo"))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot assign the task '"
-          +task.getId()+ "' because it belongs to no authenticated tenant.");
+          +taskId+ "' because it belongs to no authenticated tenant.");
 
   }
 
@@ -249,7 +251,7 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
     // when
-    taskService.addCandidateGroup(task.getId(), "demo");
+    taskService.addCandidateGroup(taskId, "demo");
 
     // then
     assertThat(taskService.createTaskQuery().taskCandidateGroup("demo").count()).isEqualTo(1L);
@@ -259,12 +261,12 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void deleteCandidateUserWithAuthenticatedTenant() {
 
-    taskService.addCandidateUser(task.getId(), "demo");
+    taskService.addCandidateUser(taskId, "demo");
     assertThat(taskService.createTaskQuery().taskCandidateUser("demo").count()).isEqualTo(1L);
 
-    identityService.setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
-    taskService.deleteCandidateUser(task.getId(), "demo");
+    taskService.deleteCandidateUser(taskId, "demo");
     // then
     assertThat(taskService.createTaskQuery().taskCandidateUser("demo").count()).isZero();
   }
@@ -272,26 +274,26 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void deleteCandidateUserWithNoAuthenticatedTenant() {
 
-    taskService.addCandidateUser(task.getId(), "demo");
+    taskService.addCandidateUser(taskId, "demo");
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> taskService.deleteCandidateUser(task.getId(), "demo"))
+    assertThatThrownBy(() -> taskService.deleteCandidateUser(taskId, "demo"))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot assign the task '"
-          + task.getId() +"' because it belongs to no authenticated tenant.");
+          + taskId +"' because it belongs to no authenticated tenant.");
 
   }
 
   @Test
   public void deleteCandidateUserWithDisabledTenantCheck() {
 
-    taskService.addCandidateUser(task.getId(), "demo");
+    taskService.addCandidateUser(taskId, "demo");
     identityService.setAuthentication("aUserId", null);
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
     // when
-    taskService.deleteCandidateUser(task.getId(), "demo");
+    taskService.deleteCandidateUser(taskId, "demo");
 
     // then
     assertThat(taskService.createTaskQuery().taskCandidateUser("demo").count()).isZero();
@@ -301,12 +303,12 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void deleteCandidateGroupWithAuthenticatedTenant() {
 
-    taskService.addCandidateGroup(task.getId(), "demo");
+    taskService.addCandidateGroup(taskId, "demo");
     assertThat(taskService.createTaskQuery().taskCandidateGroup("demo").count()).isEqualTo(1L);
 
-    identityService.setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
-    taskService.deleteCandidateGroup(task.getId(), "demo");
+    taskService.deleteCandidateGroup(taskId, "demo");
     // then
     assertThat(taskService.createTaskQuery().taskCandidateGroup("demo").count()).isZero();
   }
@@ -314,26 +316,26 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void deleteCandidateGroupWithNoAuthenticatedTenant() {
 
-    taskService.addCandidateGroup(task.getId(), "demo");
+    taskService.addCandidateGroup(taskId, "demo");
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> taskService.deleteCandidateGroup(task.getId(), "demo"))
+    assertThatThrownBy(() -> taskService.deleteCandidateGroup(taskId, "demo"))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot assign the task '"
-          + task.getId() +"' because it belongs to no authenticated tenant.");
+          + taskId +"' because it belongs to no authenticated tenant.");
 
   }
 
   @Test
   public void deleteCandidateGroupWithDisabledTenantCheck() {
 
-    taskService.addCandidateGroup(task.getId(), "demo");
+    taskService.addCandidateGroup(taskId, "demo");
     identityService.setAuthentication("aUserId", null);
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
     // when
-    taskService.deleteCandidateGroup(task.getId(), "demo");
+    taskService.deleteCandidateGroup(taskId, "demo");
 
     // then
     assertThat(taskService.createTaskQuery().taskCandidateGroup("demo").count()).isZero();
@@ -343,8 +345,8 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void addUserIdentityLinkWithAuthenticatedTenant() {
 
-    identityService.setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
-    taskService.addUserIdentityLink(task.getId(), "demo", IdentityLinkType.CANDIDATE);
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
+    taskService.addUserIdentityLink(taskId, "demo", IdentityLinkType.CANDIDATE);
 
     // then
     assertThat(taskService.createTaskQuery().taskCandidateUser("demo").count()).isEqualTo(1L);
@@ -356,10 +358,10 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> taskService.addUserIdentityLink(task.getId(), "demo", IdentityLinkType.CANDIDATE))
+    assertThatThrownBy(() -> taskService.addUserIdentityLink(taskId, "demo", IdentityLinkType.CANDIDATE))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot assign the task '"
-          + task.getId() +"' because it belongs to no authenticated tenant.");
+          + taskId +"' because it belongs to no authenticated tenant.");
 
   }
 
@@ -370,7 +372,7 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
     // when
-    taskService.addUserIdentityLink(task.getId(), "demo", IdentityLinkType.ASSIGNEE);
+    taskService.addUserIdentityLink(taskId, "demo", IdentityLinkType.ASSIGNEE);
 
     // then
     assertThat(taskService.createTaskQuery().taskAssignee("demo").count()).isEqualTo(1L);
@@ -380,8 +382,8 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void addGroupIdentityLinkWithAuthenticatedTenant() {
 
-    identityService.setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
-    taskService.addGroupIdentityLink(task.getId(), "demo", IdentityLinkType.CANDIDATE);
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
+    taskService.addGroupIdentityLink(taskId, "demo", IdentityLinkType.CANDIDATE);
 
     // then
     assertThat(taskService.createTaskQuery().taskCandidateGroup("demo").count()).isEqualTo(1L);
@@ -393,10 +395,10 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> taskService.addGroupIdentityLink(task.getId(), "demo", IdentityLinkType.CANDIDATE))
+    assertThatThrownBy(() -> taskService.addGroupIdentityLink(taskId, "demo", IdentityLinkType.CANDIDATE))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot assign the task '"
-          + task.getId() + "' because it belongs to no authenticated tenant.");
+          + taskId + "' because it belongs to no authenticated tenant.");
 
   }
 
@@ -407,7 +409,7 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
     // when
-    taskService.addGroupIdentityLink(task.getId(), "demo", IdentityLinkType.CANDIDATE);
+    taskService.addGroupIdentityLink(taskId, "demo", IdentityLinkType.CANDIDATE);
 
     // then
     assertThat(taskService.createTaskQuery().taskCandidateGroup("demo").count()).isEqualTo(1L);
@@ -417,12 +419,12 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void deleteUserIdentityLinkWithAuthenticatedTenant() {
 
-    taskService.addUserIdentityLink(task.getId(), "demo", IdentityLinkType.ASSIGNEE);
+    taskService.addUserIdentityLink(taskId, "demo", IdentityLinkType.ASSIGNEE);
     assertThat(taskService.createTaskQuery().taskAssignee("demo").count()).isEqualTo(1L);
 
-    identityService.setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
-    taskService.deleteUserIdentityLink(task.getId(), "demo", IdentityLinkType.ASSIGNEE);
+    taskService.deleteUserIdentityLink(taskId, "demo", IdentityLinkType.ASSIGNEE);
     // then
     assertThat(taskService.createTaskQuery().taskAssignee("demo").count()).isZero();
   }
@@ -430,28 +432,28 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void deleteUserIdentityLinkWithNoAuthenticatedTenant() {
 
-    taskService.addUserIdentityLink(task.getId(), "demo", IdentityLinkType.ASSIGNEE);
+    taskService.addUserIdentityLink(taskId, "demo", IdentityLinkType.ASSIGNEE);
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> taskService.deleteUserIdentityLink(task.getId(), "demo", IdentityLinkType.ASSIGNEE))
+    assertThatThrownBy(() -> taskService.deleteUserIdentityLink(taskId, "demo", IdentityLinkType.ASSIGNEE))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot assign the task '"
-          + task.getId() +"' because it belongs to no authenticated tenant.");
+          + taskId +"' because it belongs to no authenticated tenant.");
 
   }
 
   @Test
   public void deleteUserIdentityLinkWithDisabledTenantCheck() {
 
-    taskService.addUserIdentityLink(task.getId(), "demo", IdentityLinkType.ASSIGNEE);
+    taskService.addUserIdentityLink(taskId, "demo", IdentityLinkType.ASSIGNEE);
     assertThat(taskService.createTaskQuery().taskAssignee("demo").count()).isEqualTo(1L);
 
     identityService.setAuthentication("aUserId", null);
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
     // when
-    taskService.deleteUserIdentityLink(task.getId(), "demo", IdentityLinkType.ASSIGNEE);
+    taskService.deleteUserIdentityLink(taskId, "demo", IdentityLinkType.ASSIGNEE);
 
     // then
     assertThat(taskService.createTaskQuery().taskAssignee("demo").count()).isZero();
@@ -461,12 +463,12 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void deleteGroupIdentityLinkWithAuthenticatedTenant() {
 
-    taskService.addGroupIdentityLink(task.getId(), "demo", IdentityLinkType.CANDIDATE);
+    taskService.addGroupIdentityLink(taskId, "demo", IdentityLinkType.CANDIDATE);
     assertThat(taskService.createTaskQuery().taskCandidateGroup("demo").count()).isEqualTo(1L);
 
-    identityService.setAuthentication("aUserId", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("aUserId", null, List.of(TENANT_ONE));
 
-    taskService.deleteGroupIdentityLink(task.getId(), "demo", IdentityLinkType.CANDIDATE);
+    taskService.deleteGroupIdentityLink(taskId, "demo", IdentityLinkType.CANDIDATE);
     // then
     assertThat(taskService.createTaskQuery().taskCandidateGroup("demo").count()).isZero();
   }
@@ -474,28 +476,28 @@ public class MultiTenancyIdentityLinkCmdsTenantCheckTest {
   @Test
   public void deleteGroupIdentityLinkWithNoAuthenticatedTenant() {
 
-    taskService.addGroupIdentityLink(task.getId(), "demo", IdentityLinkType.CANDIDATE);
+    taskService.addGroupIdentityLink(taskId, "demo", IdentityLinkType.CANDIDATE);
     identityService.setAuthentication("aUserId", null);
 
     // when/then
-    assertThatThrownBy(() -> taskService.deleteGroupIdentityLink(task.getId(), "demo", IdentityLinkType.CANDIDATE))
+    assertThatThrownBy(() -> taskService.deleteGroupIdentityLink(taskId, "demo", IdentityLinkType.CANDIDATE))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Cannot assign the task '"
-          + task.getId() +"' because it belongs to no authenticated tenant.");
+          + taskId +"' because it belongs to no authenticated tenant.");
 
   }
 
   @Test
   public void deleteGroupIdentityLinkWithDisabledTenantCheck() {
 
-    taskService.addGroupIdentityLink(task.getId(), "demo", IdentityLinkType.CANDIDATE);
+    taskService.addGroupIdentityLink(taskId, "demo", IdentityLinkType.CANDIDATE);
     assertThat(taskService.createTaskQuery().taskCandidateGroup("demo").count()).isEqualTo(1L);
 
     identityService.setAuthentication("aUserId", null);
     engineRule.getProcessEngineConfiguration().setTenantCheckEnabled(false);
 
     // when
-    taskService.deleteGroupIdentityLink(task.getId(), "demo", IdentityLinkType.CANDIDATE);
+    taskService.deleteGroupIdentityLink(taskId, "demo", IdentityLinkType.CANDIDATE);
 
     // then
     assertThat(taskService.createTaskQuery().taskCandidateGroup("demo").count()).isZero();
